--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>GameStoryEditor</title>
-  <base href="/">
-
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+  <script>
+    if(window !== undefined) {
+      window.$ = window.jQuery = require('jquery');
+      var $ = require('jquery');
+    }
+  </script>
 </body>
 </html>
